--- a/app/src/main/res/layout/row_list.xml
+++ b/app/src/main/res/layout/row_list.xml
@@ -25,9 +25,9 @@
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_marginStart="5dp"
+                android:layout_marginLeft="5dp"
                 app:srcCompat="@mipmap/ic_launcher_round"
-                tools:ignore="VectorDrawableCompat"
-                android:layout_marginLeft="5dp" />
+                tools:ignore="VectorDrawableCompat" />
 
 
         </LinearLayout>
@@ -35,7 +35,7 @@
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="9"
+            android:layout_weight="7"
             android:orientation="vertical"
             android:padding="10dp">
 
@@ -55,6 +55,7 @@
                 android:textAppearance="?android:textAppearanceMedium"
                 android:textColor="@color/black"
                 android:textSize="12sp" />
+
             <TextView
                 android:id="@+id/txt_email"
                 android:layout_width="match_parent"
@@ -63,6 +64,34 @@
                 android:textAppearance="?android:textAppearanceMedium"
                 android:textColor="@color/black"
                 android:textSize="12sp" />
+
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_weight="2"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/iv_edit"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_marginStart="5dp"
+                android:layout_marginLeft="5dp"
+                app:srcCompat="@drawable/ic_edit"
+                tools:ignore="VectorDrawableCompat" />
+
+            <ImageView
+                android:id="@+id/iv_delete"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_marginStart="5dp"
+                android:layout_marginLeft="5dp"
+                app:srcCompat="@drawable/ic_delete"
+                tools:ignore="VectorDrawableCompat" />
 
 
         </LinearLayout>
